--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/Wes_Cover_Photo.jpg" alt="" />
 									</span>
 								</section>
 
