--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
+	<meta name="google-site-verification" content="PjugnuYNEwTCw6sUb5rPY_pIsQVkkYIkKJAwNIurM7U" />
 	<body class="is-preload">
 
 		<!-- Wrapper -->
