--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="work_experience.html">Work Experience</a></li>
+										<li><a href="hobby.html">Hobby</a></li>
 										<li><a href="elements.html">Elements</a></li>
 										<li>
 											<span class="opener">Submenu</span>
@@ -227,7 +228,7 @@
 									<p>If you have any project needs related to my expertise, please feel free to reach out to me at any time.</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">wes010657@gmail.com</a></li>
-										<li class="icon solid fa-phone">(+886)978-710721</li>
+										<li class="icon solid fa-phone">(+886)978-000000</li>
 										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
 										Nashville, TN 00000-0000</li>
 									</ul>
