--- a/work_experience.html
+++ b/work_experience.html
@@ -143,12 +143,12 @@
 										<li><a href="hobby.html">Hobby</a></li>
 										<li><a href="elements.html">Elements</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<a href="work_experience.html">Work Experience</a>
+											<span class="opener"></span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="Techncare.html">Techncare Biomedical Technology</a></li>
+												<li><a href="Saultech">Saultech Technology</a></li>
+												<li><a href="Grenergy">Grenergy Technology</a></li>
 											</ul>
 										</li>
 										<li><a href="#">Etiam Dolore</a></li>
