--- a/Techncare.html
+++ b/Techncare.html
@@ -88,7 +88,9 @@
 										<li><a href="generic.html">Generic</a></li>
 										<li><a href="elements.html">Elements</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<a href="your-link.html" class="submenu-link">
+												<span class="opener">Submenu</span>
+											</a>
 											<ul>
 												<li><a href="#">Lorem Dolor</a></li>
 												<li><a href="#">Ipsum Adipiscing</a></li>
