--- a/Techncare.html
+++ b/Techncare.html
@@ -88,14 +88,13 @@
 										<li><a href="generic.html">Generic</a></li>
 										<li><a href="elements.html">Elements</a></li>
 										<li>
-											<a href="your-link.html" class="submenu-link">
-												<span class="opener">Submenu</span>
+											<a href="work_experience.html" class="submenu-link">
+												<span class="opener">Work Experience</span>
 											</a>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="Techncare.html">Techncare Biomedical Technology</a></li>
+												<li><a href="Saultech">Saultech Technology</a></li>
+												<li><a href="Grenergy">Grenergy Technology</a></li>
 											</ul>
 										</li>
 										<li><a href="#">Etiam Dolore</a></li>
