--- a/Techncare.html
+++ b/Techncare.html
@@ -85,13 +85,12 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
+										<li><a href="hobby.html">Hobby</a></li>
 										<li><a href="elements.html">Elements</a></li>
 										<li>
-											<a href="work_experience.html" class="submenu-link">
-												<span class="opener">Work Experience</span>
-											</a>
+											<span class="opener">Work Experience</span>
 											<ul>
+												<li><a href="work_experience.html">Overview</a></li>
 												<li><a href="Techncare.html">Techncare Biomedical Technology</a></li>
 												<li><a href="Saultech">Saultech Technology</a></li>
 												<li><a href="Grenergy">Grenergy Technology</a></li>
