--- a/hobby.html
+++ b/hobby.html
@@ -456,7 +456,6 @@ print 'It took ' + i + ' iterations to sort the deck.';
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="work_experience.html">Work Experience</a></li>
 										<li><a href="hobby.html">Hobby</a></li>
 										<li><a href="elements.html">Elements</a></li>
 										<li>
@@ -471,12 +470,12 @@ print 'It took ' + i + ' iterations to sort the deck.';
 										<li><a href="#">Etiam Dolore</a></li>
 										<li><a href="#">Adipiscing</a></li>
 										<li>
-											<span class="opener">Another Submenu</span>
+											<span class="opener">Work Experience</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="work_experience.html">Overview</a></li>
+												<li><a href="Techncare.html">Techncare Biomedical Technology</a></li>
+												<li><a href="Saultech">Saultech Technology</a></li>
+												<li><a href="Grenergy">Grenergy Technology</a></li>
 											</ul>
 										</li>
 										<li><a href="#">Maximus Erat</a></li>
