--- a/work_experience.html
+++ b/work_experience.html
@@ -142,9 +142,9 @@
 										<li><a href="hobby.html">Hobby</a></li>
 										<li><a href="elements.html">Elements</a></li>
 										<li>
-											<a href="work_experience.html">Work Experience</a>
-											<span class="opener"></span>
+											<span class="opener">Work Experience</span>
 											<ul>
+												<li><a href="work_experience.html">Overview</a></li>
 												<li><a href="Techncare.html">Techncare Biomedical Technology</a></li>
 												<li><a href="Saultech">Saultech Technology</a></li>
 												<li><a href="Grenergy">Grenergy Technology</a></li>
