--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 											<p>An engineer with a keen interest in mechatronics</p>
 										</header>
 										<p>Hi, my name is HSUN-WEI TU, you can call me Wes. I graduated from National Taiwan University with a major at mechanical engineering. Welcome to my personal website.</p>
-										<ul class="actions">
+										<!--<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
-										</ul>
+										</ul> -->
 									</div>
 									<span class="image object">
 										<img src="images/Wes_Cover_Photo.jpg" alt="" />
