--- a/Techncare.html
+++ b/Techncare.html
@@ -39,8 +39,11 @@
 									</header>
 
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									
+									<hr class="major" />
 
-									<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>This is a pet breathing and heartbeat monitor for which I applied for a patent. I also Collaborated with vets to conduct experiments and handled firmware maintenance for the device.</p>
+									<h2>Pet Monitor</h2>
+									<p><span class="image left"><img src="pet moniter.jpg" alt="" /></span>This is a pet breathing and heartbeat monitor for which I applied for a patent. I also Collaborated with vets to conduct experiments and handled firmware maintenance for the device.</p>
 
 									<hr class="major" />
 
