--- a/Techncare.html
+++ b/Techncare.html
@@ -41,9 +41,8 @@
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 									
 									<hr class="major" />
-
 									<h2>Pet Monitor</h2>
-									<p><span class="image left"><img src="pet_monitor.jpg" alt="" /></span>This is a pet breathing and heartbeat monitor for which I applied for a patent. I also Collaborated with vets to conduct experiments and handled firmware maintenance for the device.</p>
+									<span class="image left"><img src="pet_monitor.jpg" alt="" /></span><p>This is a pet breathing and heartbeat monitor for which I applied for a patent. I also Collaborated with vets to conduct experiments and handled firmware maintenance for the device.</p>
 
 									<hr class="major" />
 
