--- a/Techncare.html
+++ b/Techncare.html
@@ -42,7 +42,7 @@
 									
 									<hr class="major" />
 									<h2>Pet Monitor</h2>
-									<span class="image left"><img src="pet_monitor.jpg" alt="" /></span><p>This is a pet breathing and heartbeat monitor for which I applied for a patent. I also Collaborated with vets to conduct experiments and handled firmware maintenance for the device.</p>
+									<p><span class="image left"><img src="pet_monitor.jpg" alt="Pet Monitor" /></span>This is a pet breathing and heartbeat monitor for which I applied for a patent. I also Collaborated with vets to conduct experiments and handled firmware maintenance for the device.</p>
 
 									<hr class="major" />
 
