--- a/Techncare.html
+++ b/Techncare.html
@@ -41,16 +41,25 @@
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 									
 									<hr class="major" />
-									<p><h2>Pet Monitor</h2>
-									<span class="image left"><img src="images/pet_monitor.jpg" alt="Pet Monitor" /></span>This is a pet breathing and heartbeat monitor for which I applied for a patent. I also Collaborated with vets to conduct experiments and handled firmware maintenance for the device.</p>
+									<h2>Pet Monitor</h2>
+									<p>
+									<span class="image left"><img src="images/pet_monitor.jpg" alt="Pet Monitor" /></span>
+									This is a pet breathing and heartbeat monitor for which I applied for a patent. I also collaborated with vets to conduct experiments and handled firmware maintenance for the device.
+									</p>
 
 									<hr class="major" />
-									<p><h2>Pet Thermometer</h2>
-									<span class="image left"><img src="images/pet_thermometer.jpg" alt="Pet Monitor" /></span>This is a pet breathing and heartbeat monitor for which I applied for a patent. I also Collaborated with vets to conduct experiments and handled firmware maintenance for the device.</p>
-									
+									<h2>Pet Thermometer</h2>
+									<p>
+									<span class="image left"><img src="images/pet_thermometer.jpg" alt="Pet Thermometer" /></span>
+									This is a pet thermometer for which I applied for a patent. I also collaborated with vets to conduct experiments and handled firmware maintenance for the device.
+									</p>
+
 									<hr class="major" />
 									<h2>Pet Comb</h2>
-									<p><span class="image left"><img src="images/pet_thermometer.jpg" alt="Pet Monitor" /></span>This is a pet breathing and heartbeat monitor for which I applied for a patent. I also Collaborated with vets to conduct experiments and handled firmware maintenance for the device.</p>
+									<p>
+									<span class="image left"><img src="images/pet_comb.jpg" alt="Pet Comb" /></span>
+									This is a pet comb for which I applied for a patent. I also collaborated with vets to conduct experiments and handled firmware maintenance for the device.
+									</p>
 								</section>
 
 						</div>
