--- a/Techncare.html
+++ b/Techncare.html
@@ -43,23 +43,26 @@
 									<hr class="major" />
 									<h2>Pet Monitor</h2>
 									<p>
-									<span class="image left"><img src="images/pet_monitor.jpg" alt="Pet Monitor" /></span>
-									This is a pet breathing and heartbeat monitor for which I applied for a patent. I also collaborated with vets to conduct experiments and handled firmware maintenance for the device.
+									  <span class="image left"><img src="images/pet_monitor.jpg" alt="Pet Monitor" /></span>
+									  This is a pet breathing and heartbeat monitor for which I applied for a patent. I also collaborated with vets to conduct experiments and handled firmware maintenance for the device.
 									</p>
-
+									<div style="clear: both;"></div>
+									
 									<hr class="major" />
 									<h2>Pet Thermometer</h2>
 									<p>
-									<span class="image left"><img src="images/pet_thermometer.jpg" alt="Pet Thermometer" /></span>
-									This is a pet thermometer for which I applied for a patent. I also collaborated with vets to conduct experiments and handled firmware maintenance for the device.
+									  <span class="image left"><img src="images/pet_thermometer.jpg" alt="Pet Thermometer" /></span>
+									  This is a pet thermometer for which I applied for a patent. I also collaborated with vets to conduct experiments and handled firmware maintenance for the device.
 									</p>
-
+									<div style="clear: both;"></div>
+									
 									<hr class="major" />
 									<h2>Pet Comb</h2>
 									<p>
-									<span class="image left"><img src="images/pet_comb.jpg" alt="Pet Comb" /></span>
-									This is a pet comb for which I applied for a patent. I also collaborated with vets to conduct experiments and handled firmware maintenance for the device.
+									  <span class="image left"><img src="images/pet_comb.jpg" alt="Pet Comb" /></span>
+									  This is a pet comb for which I applied for a patent. I also collaborated with vets to conduct experiments and handled firmware maintenance for the device.
 									</p>
+									<div style="clear: both;"></div>
 								</section>
 
 						</div>
