--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 								<header id="header">
 									<a href="index.html" class="logo">Portfolio of  <strong>Wes Tu</strong></a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-linkin"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 										<li><a href="https://www.facebook.com/profile.php?id=100002734296589&locale=zh_TW" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="https://www.instagram.com/hsun_wei_tu?igsh=Y3gwd2I4dDMzamRz&utm_source=qr" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
