--- a/work_experience.html
+++ b/work_experience.html
@@ -24,11 +24,10 @@
 								<header id="header">
 									<a href="index.html" class="logo">Portfolio of  <strong>Wes Tu</strong></a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="www.linkedin.com/in/勳威-杜-a4b073119" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://www.facebook.com/profile.php?id=100002734296589&locale=zh_TW" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="https://www.instagram.com/hsun_wei_tu?igsh=Y3gwd2I4dDMzamRz&utm_source=qr" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+										<li><a href="https://line.me/ti/p/2c_H8ZEUiS" class="icon brands fa-line"><span class="label">Line</span></a></li>
 									</ul>
 								</header>
 
