--- a/Saultech.html
+++ b/Saultech.html
@@ -63,12 +63,24 @@
 									  This is a module for detecting particles on wafers or chips, based on the principle of using a PMT to capture laser-scattered light reflected by particles. I was responsible for selecting the optical components, performing the mechanical design, and validating the module.
 									</p>
 									<div style="clear: both;"></div>
-
+									
+									<hr class="major" />
 									<h2>UV Debonding Machine</h2>
 									<p>
 									  <span class="image left"><img src="images/UV_debonder.jpg" alt="UV Debonding Machine" /></span>
 									  This is a simple UV debonding machine, for which I was responsible for both the design and assembly.
 
+									</p>
+									<div style="clear: both;"></div>
+
+									<hr class="major" />
+									<h2>Bonding Machine</h2>
+									<p>
+										<video controls width="640" height="360">
+											<source src="videos/DB20.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
+									  This is a bonding machine. I was responsible for the mechanical design and assembly of the machine.
 									</p>
 									<div style="clear: both;"></div>
 								</section>
