--- a/Saultech.html
+++ b/Saultech.html
@@ -80,7 +80,8 @@
 											<source src="videos/DB20.mp4" type="video/mp4">
 											Your browser does not support the video tag.
 										</video>
-									  This is a bonding machine. I was responsible for the mechanical design and assembly of the machine.
+										<br>
+										This is the hybrid bonder. At the time, and I was responsible for creating the demonstration animation for it.
 									</p>
 									<div style="clear: both;"></div>
 								</section>
