--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-pencil-mechanical"></span>
+											<span class="icon fa-solid fa-pencil-mechanical"></span>
 											<div class="content">
 												<h3>Mechanical Design</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
