--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-solid fa-pencil-mechanical"></span>
+											<span class="icon fa-solid fa-gears"></span>
 											<div class="content">
 												<h3>Mechanical Design</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-paper-plane"></span>
+											<span class="icon solid fa-solid fa-magnifying-glass"></span>
 											<div class="content">
 												<h3>Patent Application & Search</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-rocket"></span>
+											<span class="icon fa-solid fa-code"></span>
 											<div class="content">
 												<h3>Firmware Programming</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
