--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon fa-solid fa-code"></span>
+											<span class="fa-solid fa-code"></span>
 											<div class="content">
 												<h3>Firmware Programming</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
