--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 											<span class="icon fa-solid fa-gears"></span>
 											<div class="content">
 												<h3>Mechanical Design</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<p>I possess the capability to independently design semiconductor equipment. If you have any equipment design requirements, please feel free to reach out to me.</p>
 											</div>
 										</article>
 										<article>
