--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 										</li>
 										<li><a href="#">Maximus Erat</a></li>
 										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+										<li><a href="get_in_touch.html">Get In Touch</a></li>
 									</ul>
 								</nav>
 
