--- a/get_in_touch.html
+++ b/get_in_touch.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+									<a href="index.html" class="logo">Portfolio of  <strong>Wes Tu</strong></a>
 									<ul class="icons">
 										<li><a href="www.linkedin.com/in/勳威-杜-a4b073119" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://www.facebook.com/profile.php?id=100002734296589&locale=zh_TW" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -34,12 +34,12 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Elements</h1>
+										<h1>Get In Touch</h1>
 									</header>
 
 									<!-- Content -->
-										<h2 id="content">Sample Content</h2>
-										<p>Praesent ac adipiscing ullamcorper semper ut amet ac risus. Lorem sapien ut odio odio nunc. Ac adipiscing nibh porttitor erat risus justo adipiscing adipiscing amet placerat accumsan. Vis. Faucibus odio magna tempus adipiscing a non. In mi primis arcu ut non accumsan vivamus ac blandit adipiscing adipiscing arcu metus praesent turpis eu ac lacinia nunc ac commodo gravida adipiscing eget accumsan ac nunc adipiscing adipiscing lorem ipsum dolor sit amet nullam veroeros adipiscing.</p>
+										<h2 id="content">Contact Form</h2>
+										<p>If you have any inquiries related to my expertise, such as equipment mechanical design, brushless DC motor drive circuits and program development, or patent search and application, please feel free to leave your contact information below. Thank you!</p>
 
 												<!-- Form -->
 											<div class="col-6 col-12-medium">
@@ -116,7 +116,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 										</div>
 
 								</section>
-
+							</div>
 						</div>
 					</div>
 
