--- a/academic_background.html
+++ b/academic_background.html
@@ -34,13 +34,13 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Grenergy Technology</h1>
+										<h1>Academic Background</h1>
 									</header>
 
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 									
 									<hr class="major" />
-									<h2>Drone Motor</h2>
+									<h2>National Sun Yat-sen University</h2>
 									<p>
 									  <span class="image left"><img src="images/drone_motor.jpg" alt="Drone Motor" /></span>
 									  I was the project leader for this drone motor. Through this project, I learned how to develop mass production products. This process involved first completing the mechanical design, creating a golden sample, drafting the assembly SOP, and conducting product validation for the golden sample.
@@ -48,7 +48,7 @@
 									<div style="clear: both;"></div>
 									
 									<hr class="major" />
-									<h2>Motor Control Firmware</h2>
+									<h2>National Taiwan University</h2>
 									<p>
 									  <span class="image left"><img src="images/motor_control_firmware.jpg" alt="Motor Control Firmware" /></span>
 									  This is a recently completed project focused on motor control. I successfully developed a sensorless zero-crossing detection control program for a brushless DC motor. The project also involved working closely with the client to define specifications, understand use cases, and action flow, which allowed me to write the program logically. For the mechanical design aspect, I handled some basic sheet metal design tasks.
