--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="hobby.html">Hobby</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="academic_background.html">Academic Background</a></li>										
 										<li>
 											<span class="opener">Work Experience</span>
 											<ul>
@@ -177,19 +176,7 @@
 												<li><a href="Grenergy">Grenergy Technology</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
+										<li><a href="hobby.html">Hobby</a></li>										
 										<li><a href="get_in_touch.html">Get In Touch</a></li>
 									</ul>
 								</nav>
