--- a/get_in_touch.html
+++ b/get_in_touch.html
@@ -77,8 +77,18 @@
                         </header>
                         <ul>
                             <li><a href="index.html">Homepage</a></li>
-                            <li><a href="hobby.html">Hobby</a></li>
-                            <li><a href="work_experience.html">Work Experience</a></li>
+                            <li><a href="academic_background.html">Academic Background</a></li>										
+                            <li>
+                                <span class="opener">Work Experience</span>
+                                <ul>
+                                    <li><a href="work_experience.html">Overview</a></li>
+                                    <li><a href="Techncare.html">Techncare Biomedical Technology</a></li>
+                                    <li><a href="Saultech">Saultech Technology</a></li>
+                                    <li><a href="Grenergy">Grenergy Technology</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="hobbies.html">Hobbies</a></li>										
+                            <li><a href="get_in_touch.html">Get In Touch</a></li>
                         </ul>
                     </nav>
 
