--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 												<li><a href="Grenergy">Grenergy Technology</a></li>
 											</ul>
 										</li>
-										<li><a href="hobby.html">Hobby</a></li>										
+										<li><a href="hobbies.html">Hobbies</a></li>										
 										<li><a href="get_in_touch.html">Get In Touch</a></li>
 									</ul>
 								</nav>
