--- a/Grenergy.html
+++ b/Grenergy.html
@@ -85,8 +85,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="hobbies.html">Hobbies</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="academic_background.html">Academic Background</a></li>										
 										<li>
 											<span class="opener">Work Experience</span>
 											<ul>
@@ -96,20 +95,8 @@
 												<li><a href="Grenergy">Grenergy Technology</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+										<li><a href="hobbies.html">Hobbies</a></li>										
+										<li><a href="get_in_touch.html">Get In Touch</a></li>
 									</ul>
 								</nav>
 
