--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-solid fa-gears"></span>
+											<span class="icon fa-solid fa-gear"></span>
 											<div class="content">
 												<h3>Mechanical Design</h3>
 												<p>I possess the capability to independently design semiconductor equipment. If you have any equipment design requirements, please feel free to reach out to me.</p>
@@ -68,7 +68,7 @@
 											<span class="icon solid fa-magnifying-glass"></span>
 											<div class="content">
 												<h3>Patent Application & Search</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<p>With four years of experiences in patent</p>
 											</div>
 										</article>
 										<article>
