--- a/work_experience.html
+++ b/work_experience.html
@@ -34,7 +34,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Work Experience</h1>
+										<h1>Work Experience Overview</h1>
 									</header>
 
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
