--- a/index.html
+++ b/index.html
@@ -58,24 +58,24 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-solid fa-gear"></span>
+											<span class="icon solid fa-pen"></span>
 											<div class="content">
 												<h3>Mechanical Design</h3>
-												<p>I possess the capability to independently design semiconductor equipment. If you have any equipment design requirements, please feel free to reach out to me.</p>
+												<p>I have the capability to independently design semiconductor equipment. My past designs include a semiconductor chip cleaning machine, a debonding test platform, a UV de-gluing machine, and various manual operation modules.</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-magnifying-glass"></span>
+											<span class="icon brands fa-searchengin"></span>
 											<div class="content">
 												<h3>Patent Application & Search</h3>
-												<p>With four years of experiences in patent</p>
+												<p>With four years of experiences in patent, I've got the ability to conduct patent searches and draft new patent applications. I have independently written and successfully filed a utility patent related to the design of a cup, showcasing my capability to handle the entire process from start to finish.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-code"></span>
 											<div class="content">
 												<h3>Firmware Programming</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<p>Since 2024, I have been working as a firmware engineer, with expertise in ARM systems, primarily using ST microcontrollers. My programming work mainly focuses on brushless DC motor control.</p>
 											</div>
 										</article>
 										<!--<article>
